tests/functional/lang/parse-fail/unexpected-concat.err.exp
error: syntax error, unexpected '++'
       at «stdin»:1:1:
            1| ++ []
             | ^
            2|
